
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fputc (char,int *) ;
 int fputs (char*,int *) ;

int main()
{
 FILE *f;
 f = fopen("dos.nsv", "w");
 fputs("\x4e\x53\x56\x66", f);
 fputc('\x00', f);
 fputc('\x00', f);
 fputc('\x00', f);
 fputc('\x00', f);
 fclose(f);
 return 0;
}
